Fixed some final spacing issues with new section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ a:visited {
   }
 
   .contact-info {
-    padding: 20px 2.5% 50px;
+    padding: 20px 2.5%;
   }
 
  .footer-nav {
